        Add config option to omit recent changes from home page.
        Split out "modules" from navbar.tt into separate templates navbar_*.tt
          to make it easier for people to change the order in a custom template
        Move common categories/locales into navbar.
        Add a new div to wrap the entire body; also, use header.tt in
          home_node.tt instead of copy/paste.
        Add config option to place content above navbar in HTML.
        Add config option to suppress inline maps on geotagged nodes.
        Add support for custom template to add to page <head> (#191).
        Fix preferences to take notice of users turning off inline Google maps.
        Add option to include Google Analytics.
        Fix "Link to this page" on index maps to remember the map type and
          the thing it's indexing (#190).
        Write tests for and fix:
          #48 (Edit conflict page erroneously converts lat/lon to os_x, os_y).
          #173 (edit conflict form doesn't let you edit everything).
        Fix:
          #184 (Build.PL doesn't treat the absence of Config::Tiny gracefully.)

0.58    21 December 2006
        Tidy up some minor bugs in the new features.
        Add RDF autodiscovery link to nodes' <head> section.
        Added more data to RDF output
        Redesign node history view along lines of that used by MediaWiki
          (http://www.mediawiki.org/) for clarity.
        Add UPGRADING file which summarises important information for people
          upgrading.
        Add an optional new config parameter, http_charset, which will set
          an explicit charset http header on all responses.
        Add an optional new config parameter, ping_services, which is a list
          of services (defined in Wiki::Toolkit::Plugin::Ping) to ping when
          a node is written. Allows you to ping pingerati etc on changes.
        Helmert Transforms, so that British National grid users can have 
        accurate Google Maps tie-ins.