@@ -2,7 +2,11 @@
 [% INCLUDE banner.tt %]
 
 <div id="content">
-[% INCLUDE navbar.tt %]
+
+[% IF !config.content_above_navbar_in_html %]
+  [% INCLUDE navbar.tt %]
+[% END %]
+
 <div id="maincontent">
   <h2>Recent site changes</h2>
   [% UNLESS since %]
@@ -81,10 +85,17 @@
 
 </div>
 
-<p>
-  This list is available as a
-  <a href="[% cgi_url %]?action=rc;format=rss">rss feed</a>
-  and as an
-  <a href="[% cgi_url %]?action=rc;format=atom">atom feed</a>.
-</p>
+[% IF config.content_above_navbar_in_html %]
+  [% INCLUDE navbar.tt %]
+[% END %]
+
+<div id="recent_changes_feeds">
+  <p>
+    This list is available as a
+    <a href="[% cgi_url %]?action=rc;format=rss">rss feed</a>
+    and as an
+    <a href="[% cgi_url %]?action=rc;format=atom">atom feed</a>.
+  </p>
+</div>
+
 [% INCLUDE footer.tt %]
